--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   border: none;
 }
 .box {
-  /* outline: 1px solid rgba(22, 21, 21, 0.322); */
   width: 30%;
   height: 30%;
   margin-top: 2rem;
@@ -34,4 +33,16 @@ body {
   background-color: rgb(0, 132, 255);
   padding: 0.5rem;
   margin-bottom: 1rem;
+}
+@media screen and (max-width: 768px) {
+  .head {
+    padding-left: 4rem;
+  }
+  .form-group input {
+    margin-left: 7rem;
+    width: 20rem;
+  }
+  .box {
+    margin-left: 7rem;
+  }
 }
