change html,css code

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   padding: 0.5rem;
   margin-bottom: 1rem;
 }
-.card-gren {
+.card-green {
   background-color: rgb(30, 255, 0);
   padding: 0.5rem;
   margin-bottom: 1rem;
@@ -35,14 +35,20 @@ body {
   margin-bottom: 1rem;
 }
 @media screen and (max-width: 500px) {
-  .head {
-    padding-left: 4rem;
-  }
   .form-group input {
-    margin-left: 7rem;
-    width: 20rem;
+    margin-left: 6rem;
+    width: 18rem;
   }
   .box {
-    margin-left: 7rem;
+    margin-left: 6rem;
+  }
+  .card-red {
+    width: 17rem;
+  }
+  .card-green {
+    width: 17rem;
+  }
+  .card-yellow {
+    width: 17rem;
   }
 }
