change css code

--- a/style.css
+++ b/style.css
@@ -35,12 +35,17 @@ body {
   margin-bottom: 1rem;
 }
 @media screen and (max-width: 500px) {
+  .head {
+    margin-top: 1.5rem;
+  }
   .form-group input {
-    margin-left: 6rem;
+    margin-left: 5rem;
+    margin-right: 1rem;
     width: 18rem;
   }
   .box {
-    margin-left: 6rem;
+    margin-right: 1rem;
+    margin-left: 5rem;
   }
   .card-red {
     width: 17rem;
